--- a/resource_hints.routing.yml
+++ b/resource_hints.routing.yml
@@ -1,7 +1,7 @@
-resource_hints.settings:
+resource_hints.config:
   path: 'admin/config/development/resources-hints'
   defaults:
-    _form: '\Drupal\resource_hints\Form\ResourceHintsSettingsForm'
+    _form: '\Drupal\resource_hints\Form\ResourceHintsConfigForm'
     _title: 'Resource Hints'
   requirements:
     _permission: 'administer resource hints'
