--- a/resource_hints.links.menu.yml
+++ b/resource_hints.links.menu.yml
@@ -1,5 +1,5 @@
 resource_hints.config:
   title: Resource Hints
-  route_name: resource_hints.config
+  parent: system.performance_settings
   description: 'Configure settings for resources hints.'
-  parent: system.admin_config_development
+  route_name: resource_hints.config
