--- a/resource_hints.info.yml
+++ b/resource_hints.info.yml
@@ -2,4 +2,5 @@ name: Resource Hints
 type: module
 description: 'Configure resource hints - https://www.w3.org/TR/resource-hints/'
 package: Performance
+configure: resource_hints.config
 core: 8.x
