Issue #2945879 by Mashir, WidgetsBurritos: Rename resource_hints.config to resource_hints.settings

--- a/resource_hints.links.menu.yml
+++ b/resource_hints.links.menu.yml
@@ -1,5 +1,5 @@
-resource_hints.config:
+resource_hints.settings:
   title: Resource Hints
   parent: system.performance_settings
   description: 'Configure settings for resources hints.'
-  route_name: resource_hints.config
+  route_name: resource_hints.settings
